將程式碼區塊變成 mac 主題

--- a/themes/next/source/css/_common/scaffolding/highlight/highlight.styl
+++ b/themes/next/source/css/_common/scaffolding/highlight/highlight.styl
@@ -19,9 +19,9 @@ pre, code {
 }
 
 code {
-  background: $code-background;
+  background: $highlight-background;
   border-radius: 3px;
-  color: $code-foreground;
+  color: $highlight-foreground;
   padding: 2px 4px;
   word-wrap();
 }
