--- a/css/main.css
+++ b/css/main.css
@@ -1242,7 +1242,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #ff7703;
+  background: #626fc9;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
